# DEMO-RAG

./: .env.example  .gitignore  DATABASE_SCHEMA.md  Prepare.md  README.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py
src/: __init__.py  chunking.py  config.py  docx_loader.py  extract_to_sqlite.py  ingest.py  models.py  query.py  storage_sqlite.py  vector_store.py
